--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -32,22 +32,55 @@
 
             <tbody>
               <tr *ngFor="let pedido of pedidos">
-                <td>{{pedido.id_pedido}}</td>
+                <td><!-- {{pedido.id}} --></td>
                 <td>{{pedido.fecha}}</td>
                 <td>{{pedido.cliente_nombre}}</td>
                 <td>{{pedido.cliente_email}}</td>
                 <td>{{pedido.cliente_numero}}</td>
                 <td>{{pedido.productos.length}}</td>
                 <td class="text-right">
-                  <button mat-icon-button (click)="verCliente(pedido)">
-                    <mat-icon>contact_mail</mat-icon>
-                  </button>
-                  <button mat-icon-button (click)="verProductos(pedido)">
-                    <mat-icon>storage</mat-icon>
-                  </button>
-                  <button mat-icon-button (click)="verPedidoCompleto(pedido)">
-                    <mat-icon>create</mat-icon>
-                  </button>
+                  <div class="d-none d-lg-block">
+                    <button mat-icon-button (click)="verCliente(pedido)">
+                      <mat-icon>contact_mail</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="verProductos(pedido)">
+                      <mat-icon>storage</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="verPedidoCompleto(pedido)">
+                      <mat-icon>create</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="delUsuario(usuario)">
+                      <mat-icon>delete</mat-icon>                      
+                    </button>
+                  </div>
+
+                  <div class="d-lg-none">
+                    <button mat-icon-button [matMenuTriggerFor]="menu">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item (click)="verCliente(pedido)">
+                        <mat-icon>contact_mail</mat-icon>
+                        <span>Cliente</span>
+                      </button>
+                      <button mat-menu-item (click)="verProductos(pedido)">
+                        <mat-icon>storage</mat-icon>
+                        <span>Productos</span>
+                      </button>
+                      <button mat-menu-item (click)="verPedidoCompleto(pedido)">
+                        <mat-icon>create</mat-icon>
+                        <span>Pedido</span>
+                      </button>
+                      <button mat-menu-item (click)="delUsuario(usuario)">
+                        <mat-icon>delete</mat-icon>
+                        <span>Eliminar</span>
+                      </button>
+                    </mat-menu>
+                  </div>
+
+
+
                 </td>
               </tr>
             </tbody>
