--- a/src/app/components/tablero/tablero.component.html
+++ b/src/app/components/tablero/tablero.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-12 col-mat-6 col-xl-4 p-2">
+    <div class="col-12 col-md-6 col-lg-4 p-2">
       <a [routerLink]="['/usuarios']">
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Usuarios</mat-card-title>
@@ -11,7 +11,7 @@
       </a>
     </div>
 
-    <div class="col-12 col-mat-6 col-xl-4 p-2">
+    <div class="col-12 col-md-6 col-lg-4 p-2">
       <a [routerLink]="['/anuncios']">
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Anuncios</mat-card-title>
@@ -21,7 +21,7 @@
       </a>
     </div>
 
-    <div class="col-12 col-mat-6 col-xl-4 p-2">
+    <div class="col-12 col-md-6 col-lg-4 p-2">
       <a [routerLink]="['/crear-anuncio']">
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Crear Anuncio</mat-card-title>
@@ -31,7 +31,7 @@
       </a>
     </div>
 
-    <div class="col-12 col-mat-6 col-xl-4 p-2">
+    <div class="col-12 col-md-6 col-lg-4 p-2">
       <a [routerLink]="['/clientes']">
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Clientes</mat-card-title>
@@ -41,7 +41,7 @@
       </a>
     </div>
 
-    <div class="col-12 col-mat-6 col-xl-4 p-2">
+    <div class="col-12 col-md-6 col-lg-4 p-2">
       <a [routerLink]="['/pedidos']">
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Pedidos</mat-card-title>
